adding about and check

--- a/TaskOne/index.html
+++ b/TaskOne/index.html
@@ -31,8 +31,62 @@
              </ul>
              <botton class="btn nav__btn">Book Now</botton>
          </nav>
+         <div class="section__container header__container" id="home">
+            <p>Simple - Unique - Friendly</p>
+            <h1>Make yourself At Home <br> In Our <span>Hotel</span>.</h1>
+         </div>
      </header>
 
+     <section class="section__container booking__container">
+        <form action="/" class="booking__form">
+            <div class="input__group">
+                <span><i class="ri-calendar-2-fill"></i></span>
+                <div>
+                    <label for="check-in">CHECK-IN</label>
+                    <input type="text" placeholder="Check in" />
+                </div>
+            </div>
+
+            <div class="input__group">
+                <span><i class="ri-calendar-2-fill"></i></span>
+                <div>
+                    <label for="check-out">CHECK-OUT</label>
+                    <input type="text" placeholder="Check out" />
+                </div>
+            </div>
+
+            <div class="input__group">
+                <span><i class="ri-user-fill"></i></i></span>
+                <div>
+                    <label for="guest">GUEST</label>
+                    <input type="text" placeholder="Guest" />
+                </div>
+            </div>
+            <div class="input__group input__btn">
+                <button class="btn">CHECK OUT</button>
+            </div>
+        </form>
+     </section>
+
+     <section class="section__container about__container" id="about">
+        <div class="about__image">
+            <img src="image/about.jpg" alt="about">
+        </div>
+        <div class="about__content">
+            <p class="section__subheader">ABOUT US</p>
+            <h2 class="section__header">The Best Holidays Start Here!</h2>
+            <p class="section__description">
+                With focus on quality accomodation, personalized experience,
+                seamless booking,our platform is dedicated to ensuring that
+                traveler embarks on their dream holiday with confidence and 
+                excitement.
+            </p>
+            <div class="about__btn">
+                <button class="btn">Read More</button>
+            </div>
+        </div>
+     </section>
+     <script src="https://unpkg.com/scrollreveal"></script>
      <script src="main.js"></script>
  </body>
  </html>
