--- a/TaskOne/index.html
+++ b/TaskOne/index.html
@@ -86,6 +86,96 @@
             </div>
         </div>
      </section>
+     <section class="section__container room__container">
+        <p class="section__subheader">OUR LIVING ROOM</p>
+        <h2 class="section__header">The Most Memorable Rest Time Starts Here.</h2>
+        <div class="room__grid">
+            <div class="room__card">
+                <div class="room__card__image">
+                    <img src="image/room-1.jpg" alt="room">
+                    <div class="room__card__icons">
+                        <span><i class="ri-heart-fill"></i></span>
+                        <span><i class="ri-paint-fill"></i></span>
+                        <span><i class="ri-shield-star-line"></i></span>
+                    </div>
+                </div>
+                <div class="room__card__details">
+                    <h4>Delux Ocean View</h4>
+                    <p>
+                        Bask in luxury with breathtaking ocean views from your 
+                        private suite.
+                    </p>
+                    <h5>Starting from <span>$299/night</span></h5>
+                    <button class="btn">Book Now</button>
+                </div>
+            </div>
+            <div class="room__card">
+                <div class="room__card__image">
+                    <img src="image/room-2.jpg" alt="room">
+                    <div class="room__card__icons">
+                        <span><i class="ri-heart-fill"></i></span>
+                        <span><i class="ri-paint-fill"></i></span>
+                        <span><i class="ri-shield-star-line"></i></span>
+                    </div>
+                </div>
+                <div class="room__card__details">
+                    <h4>Executive Cityscape View</h4>
+                    <p>
+                        Experience urban eligance and modern confort in the 
+                        heart of city.
+                    </p>
+                    <h5>Starting from <span>$199/night</span></h5>
+                    <button class="btn">Book Now</button>
+                </div>
+            </div>
+            <div class="room__card">
+                <div class="room__card__image">
+                    <img src="image/room-3.jpg" alt="room">
+                    <div class="room__card__icons">
+                        <span><i class="ri-heart-fill"></i></span>
+                        <span><i class="ri-paint-fill"></i></span>
+                        <span><i class="ri-shield-star-line"></i></span>
+                    </div>
+                </div>
+                <div class="room__card__details">
+                    <h4>Family Garden Retreat</h4>
+                    <p>
+                        Spacious and inviting, perfect for creating cherishad
+                        memories with loved once.
+                    </p>
+                    <h5>Starting from <span>$249/night</span></h5>
+                    <button class="btn">Book Now</button>
+                </div>
+            </div>
+        </div>
+     </section>
+     <section class="service" id="service">
+        <div class="section__container service__container">
+            <div class="service__content">
+                <p class="section__subheader">SERVICES</p>
+                <h2 class="section__header">Strive Only For The Best.</h2>
+                <ul class="service__list">
+                    <li>
+                        <span><i class="ri-shield-star-line"></i></span>
+                        High Class Security
+                    </li>
+                    <li>
+                        <span><i class="ri-24-hours-line"></i></span>
+                        24 Hours Room Service
+                    </li>
+                    <li>
+                        <span><i class="ri-headphone-line"></i></span>
+                        Conference Room
+                    </li>
+                    <li>
+                        <span><i class="ri-map-2-line"></i></span>
+                        Tourist Guide Support
+                    </li>
+                    
+                </ul>
+            </div>
+        </div>
+     </section>
      <script src="https://unpkg.com/scrollreveal"></script>
      <script src="main.js"></script>
  </body>
