--- a/TaskOne/index.html
+++ b/TaskOne/index.html
@@ -176,6 +176,82 @@
             </div>
         </div>
      </section>
+     <section class="section__container banner__container">
+        <div class="banner__content">
+            <div class="banner__card">
+                <h4>25+</h4>
+                <p>Properties Available</p>
+            </div>
+            <div class="banner__card">
+                <h4>350+</h4>
+                <p>PBooking Completed</p>
+            </div>
+            <div class="banner__card">
+                <h4>600+</h4>
+                <p>Happy Customers</p>
+            </div>
+        </div>
+     </section>
+     <section class="explore" id="explore">
+        <p class="section__subheader">EXPLORE</p>
+        <h2 class="section__header">What's New Today.</h2>
+        <div class="explore__bg">
+            <div class="explore__content">
+                <p class="section__description">10th MAR 2023</p>
+                <h4>A New Menu Is Available In Our Hotel</h4>
+                <button class="btn">Continue</button>
+            </div>
+        </div>
+     </section>
+     <footer class="footer" id="contact">
+        <div class="section__container footer__container">
+            <div class="footer__col">
+                <div class="logo">
+                    <a href="#home"><img src="image/logo.png" alt="logo"></a>
+                </div>
+                <p class="section__description">
+                    Discover a World of comfort, luxury, and adventure as your explore
+                    our curated selection hotels,making every moment of your getaway
+                    truly extraordinary.
+                </p>
+                <button class="btn">Book Now</button>
+            </div>
+            <div class="footer__col">
+                <h4>Quick Links</h4>
+                <ul class="footer__links">
+                    <li><a href="#">Browse Destination</a></li>
+                    <li><a href="#">Special offer & Packages</a></li>
+                    <li><a href="#">Room Type & Amenities</a></li>
+                    <li><a href="#">Customer Review & Ratings</a></li>
+                    <li><a href="#">Travel Tips & Guide</a></li>
+                </ul>
+            </div>
+            <div class="footer__col">
+                <h4>OUR SERVICES</h4>
+                <ul class="footer__links">
+                    <li><a href="#">Concierge Assistance</a></li>
+                    <li><a href="#">Flexible Booking Option</a></li>
+                    <li><a href="#">Airport Transfers</a></li>
+                    <li><a href="#">Wellness & Recreation</a></li>
+                </ul>
+            </div>
+            <div class="footer__col">
+                <h4>CONTACT US</h4>
+                <ul class="footer__links">
+                    <li><a href="">rayalpark@gmail.com</a></li>
+                </ul>
+                <div class="footer__socials">
+                    <a href="#"><img src="image/facebook.png"alt="facebook"></a>
+                    <a href="#"><img src="image/twitter.png" alt="twiter"></a>
+                    <a href="#"><img src="image/instagram.png" alt="instagram"></a>
+                    <a href="#"><img src="image/youtube.png" alt="youtube"></a>
+                </div>
+            </div>
+        </div>
+        <div class="footer__bar">
+            Copyright 2024 .All rights reserved.
+        </div>
+     </footer>
      <script src="https://unpkg.com/scrollreveal"></script>
      <script src="main.js"></script>
  </body>
