adding service,explore,footer

--- a/TaskOne/index.html
+++ b/TaskOne/index.html
@@ -43,7 +43,7 @@
                 <span><i class="ri-calendar-2-fill"></i></span>
                 <div>
                     <label for="check-in">CHECK-IN</label>
-                    <input type="text" placeholder="Check in" />
+                    <input type="date" placeholder="Check in" />
                 </div>
             </div>
 
@@ -51,7 +51,7 @@
                 <span><i class="ri-calendar-2-fill"></i></span>
                 <div>
                     <label for="check-out">CHECK-OUT</label>
-                    <input type="text" placeholder="Check out" />
+                    <input type="date" placeholder="Check out" />
                 </div>
             </div>
 
